[package]
name = "linkedin-csv"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structs defined to hold the data as exported from LinkedIn"
keywords = ["serde", "deserialize", "linkedin", "csv"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/szabgab/linkedin-csv.rs"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
